--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "monitor": "nodemon app.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^0.3.0",
     "assert": "^1.4.1",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "fs": "0.0.2",
-    "gcloud": "^0.33.0",
+    "google-cloud": "^0.42.2",
+    "googleapis": "^13.0.0",
     "hbase": "^0.2.2",
     "node-thrift-hbase": "^0.12.1"
   },
