--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "monitor": "nodemon app.js"
   },
   "dependencies": {
+    "@google-cloud/bigtable": "^0.5.1",
     "@google-cloud/storage": "^0.3.0",
     "assert": "^1.4.1",
     "body-parser": "^1.15.1",
