--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "license": "Apache Version 2.0",
-  "author": "wang yu",
+  "author": "wwwyyy",
   "engines": {
     "node": "^4.2.2"
   },
