--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hbase-test-wy",
-  "description": "Sample for HBase thrift2 api call",
+  "name": "cloud exer",
+  "description": "cloud exer",
   "version": "0.0.1",
   "private": true,
   "license": "Apache Version 2.0",
