--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
   },
   "dependencies": {
     "@google-cloud/bigtable": "^0.5.1",
-    "@google-cloud/storage": "^0.3.0",
     "@google-cloud/pubsub": "^0.3.0",
+    "@google-cloud/storage": "^0.3.0",
     "assert": "^1.4.1",
     "body-parser": "^1.15.1",
+    "crypto": "0.0.3",
     "express": "^4.13.4",
     "fs": "0.0.2",
     "google-cloud": "^0.42.2",
     "googleapis": "^13.0.0",
     "hbase": "^0.2.2",
     "node-thrift-hbase": "^0.12.1",
-    "to-regex-range": "^1.0.2"
+    "stream": "0.0.2",
+    "to-regex-range": "^1.0.2",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "crypto-js": "^3.1.6"
